# fltk-webview-practice

./: README.md
fltk_webview_ad_block/: Cargo.toml
fltk_webview_ad_block/src/: main.rs
fltk_webview_simple_player/: Cargo.toml
fltk_webview_simple_player/src/: data_scraper.rs  file_handler.rs  main.rs
fltk_webview_simple_player/src/static/: index.html
